--- a/app/assets/stylesheets/provider/_settings_box.scss
+++ b/app/assets/stylesheets/provider/_settings_box.scss
@@ -41,7 +41,9 @@
   }
 
   & + .integration {
+    @include white-box-shadow;
     margin-top: line-height-times(1);
+    padding: line-height-times(1);
   }
 
   &-section + &-section {
