Display a deprecated message when Service uses plugin deployment
THREESCALE-2395
Our plugin deployment option is deprecated. To avoid needing some data
migration in database, this commit sets the deployment option as hosted
if the current option is set to plugins and also displays a message to
the user to update their configuration.

--- a/app/views/layouts/api/_service.html.slim
+++ b/app/views/layouts/api/_service.html.slim
@@ -2,6 +2,7 @@
   h1
     = yield :sublayout_title
 
+/ TODO: Remove this when no one use plugins
 = render 'shared/service/deprecated_plugin_warning'
 
 = yield
