Include PF4 styles for settings page

--- a/app/views/layouts/provider.html.slim
+++ b/app/views/layouts/provider.html.slim
@@ -9,6 +9,7 @@ html[lang="en"]
     = javascript_pack_tag 'PF4Styles/base'
     = render 'provider/theme'
     = render 'provider/analytics'
+    = javascript_pack_tag 'settingsPageStyles'
     = javascript_include_tag 'provider/layout/provider'
     = yield :javascripts
 
