--- a/app/views/layouts/provider/login.html.slim
+++ b/app/views/layouts/provider/login.html.slim
@@ -7,7 +7,8 @@ html lang="en"
 
     = render 'provider/analytics'
     = stylesheet_link_tag 'loginPageFonts'
-    = javascript_pack_tag 'loginPageStyles'
+    = javascript_pack_tag 'PF4Styles/base'
+    = javascript_pack_tag 'PF4Styles/loginPage'
     = javascript_include_tag 'vendor/jquery-1.8.2.min.js', 'vendor/rails.js'
 
   //
