--- a/app/javascript/src/Policies/styles/policies.scss
+++ b/app/javascript/src/Policies/styles/policies.scss
@@ -75,8 +75,8 @@ $error-color: #c00;
 
     &-remove {
       background-color: white;
-      color: $dontColor;
       border-color: $dontColor;
+      color: $dontColor;
     }
 
     &-description {
@@ -109,7 +109,7 @@ $error-color: #c00;
     &-form {
       clear: both;
 
-      &> .form-group {
+      & > .form-group {
         padding-bottom: 2rem;
         border-bottom: 1px dashed $subtleColor;
       }
@@ -119,7 +119,7 @@ $error-color: #c00;
       justify-content: flex-end !important;
     }
 
-    button[type=submit] {
+    button[type="submit"] {
       margin-bottom: 2rem;
     }
 
@@ -156,7 +156,6 @@ $error-color: #c00;
   text-align: left;
 
   &.Policy--disabled {
-
     .Policy-name,
     .Policy-summary,
     .Policy-version {
