--- a/app/assets/stylesheets/provider/_pop_navigation.scss
+++ b/app/assets/stylesheets/provider/_pop_navigation.scss
@@ -9,8 +9,6 @@ $pf4-sidebar-width: 18.125rem;
 
     .PopNavigation-list {
       background-color: $white;
-      left: $pf4-sidebar-width;
-      margin-left: line-height-times(1 / 2);
     }
   }
 
@@ -97,7 +95,6 @@ $pf4-sidebar-width: 18.125rem;
     color: $gallery;
     cursor: pointer;
     display: block;
-    min-width: line-height-times(5 / 2, true);
 
     &:hover,
     &.is-toggled,
@@ -110,3 +107,16 @@ $pf4-sidebar-width: 18.125rem;
     }
   }
 }
+
+/****** HACK ******/
+
+/* This is a temporary fix, should be removed when the context selector
+is moved to the right, to match PF4 style */
+
+// scss-lint:disable SelectorFormat
+.pf-c-page__header-tools {
+  .PopNavigation-trigger {
+    margin-left: line-height-times(2);
+  }
+}
+/****** END OF HACK ******/
