--- a/app/assets/stylesheets/provider/layouts/_main.scss
+++ b/app/assets/stylesheets/provider/layouts/_main.scss
@@ -1,3 +1,7 @@
+body {
+  min-width: $layout-wrapper-min-width;
+}
+
 .wrapper, #layout-header, #wrapper {
   margin: 0 auto;
   position: relative;
