Fix N+1 Queries on dashboard backend list

--- a/app/views/provider/admin/dashboards/_list_backends.html.slim
+++ b/app/views/provider/admin/dashboards/_list_backends.html.slim
@@ -1,4 +1,4 @@
-- backends = current_account.backend_apis
+- backends = current_account.backend_apis.includes(:services)
 
 table class='data'
   thead
