Updated with dark nav

--- a/app/views/shared/provider/navigation/_vertical_nav.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav.html.slim
@@ -4,7 +4,7 @@
 - active_section = active_submenu
 - active_item = active_sidebar
 
-#vertical-nav-wrapper class='pf-c-page__sidebar' data-sections=sections.to_json data-active_section=active_section data-active_item=active_item
+#vertical-nav-wrapper class='pf-c-page__sidebar pf-m-dark' data-sections=sections.to_json data-active_section=active_section data-active_item=active_item
 
   div.pf-c-page__sidebar-body
     nav#mainmenu class='pf-c-nav'
