--- a/app/javascript/src/patternflyStyles/pf4BaseIE11.scss
+++ b/app/javascript/src/patternflyStyles/pf4BaseIE11.scss
@@ -90,6 +90,7 @@ button:-moz-focusring,
   .pf-c-nav__link:active,
   .pf-c-nav__link:hover {
     color: #06c;
+    font-weight: bold;
 
     &::after {
       background-color: #06c;
@@ -101,7 +102,8 @@ button:-moz-focusring,
   .pf-m-current {
     &> .pf-c-nav__link,
     &.pf-c-nav__link {
-      color: #06c;
+      color: #fff;
+      font-weight: bold;
 
       &::after {
         background-color: #06c;
@@ -143,25 +145,26 @@ button:-moz-focusring,
     display: block;
     padding: 0.5rem 1.5rem 0.5rem calc(1.5rem + 1rem);
     font-weight: 500;
-    color: #131313;
+    color: #fff;
 
     &:hover,
     &:active {
-      color: #06c;
-      background-color: #f5f5f5;
+      color: #fff;
+      font-weight: 16px;
+      background-color: rgb(79, 82, 85);;
     }
   
     &:focus,
     &:active {
-      font-weight: 500;
-      background-color: #f5f5f5;
+      font-weight: 16px;
+      background-color: rgb(79, 82, 85);;
     }
   
     &.pf-m-hover,
     &.pf-m-focus,
     &.pf-m-current,
     &.pf-m-active {
-      background-color: #f5f5f5;
+      background-color: rgb(79, 82, 85);;
     }
   }
 
@@ -408,3 +411,26 @@ button:-moz-focusring,
     -ms-grid-column: 2;
   }
 }
+
+.pf-c-nav.pf-m-dark .pf-c-divider {
+  background-color: #4f5255; }
+.pf-c-nav.pf-m-dark .pf-c-nav__item.pf-m-current {
+  /* stylelint-disable-next-line */ }
+  .pf-c-nav.pf-m-dark .pf-c-nav__item.pf-m-current .pf-c-divider {
+    background-color: #212427; }
+.pf-c-nav.pf-m-dark .pf-c-nav__item.pf-m-expanded {
+  padding-bottom: 0.5rem;
+  /* stylelint-disable-next-line */ }
+.pf-c-nav.pf-m-dark .pf-c-nav__list > .pf-c-nav__item {
+  /* stylelint-disable-next-line */ }
+  .pf-c-nav.pf-m-dark .pf-c-nav__list > .pf-c-nav__item.pf-m-current {
+    background-color: #3c3f42; }
+  .pf-c-nav.pf-m-dark .pf-c-nav__list > .pf-c-nav__item > .pf-c-nav__link.pf-m-current {
+    background-color: #3c3f42; }
+    .pf-c-nav.pf-m-dark .pf-c-nav__list > .pf-c-nav__item > .pf-c-nav__link {
+      background-color: rgb(33, 36, 39); 
+      color: #fff}
+
+.pf-c-page__sidebar.pf-m-dark {
+  background-color: rgb(33, 36, 39);;
+  color: #fff; }
