Updated with review comments.

--- a/app/assets/stylesheets/provider/_vertical_nav.scss
+++ b/app/assets/stylesheets/provider/_vertical_nav.scss
@@ -1,7 +1,7 @@
 .pf-c-page__sidebar {
+  color: $white;
   text-align: left;
   text-decoration: none;
-  color: #fff;
 
   .pf-c-nav__section-title {
     // Give artificial margin-top of pf-c-nav__section
