--- a/app/assets/stylesheets/provider/layouts/_main.scss
+++ b/app/assets/stylesheets/provider/layouts/_main.scss
@@ -31,6 +31,12 @@ body {
   background-color: $gallery;
 }
 
+.pf-c-nav__link {
+  .fa-exclamation-triangle {
+    margin-left: line-height-times(1 / 4);
+  }
+}
+
 @mixin white-box-shadow {
   background-color: $white;
   box-shadow: $whiteBoxShadow;
