--- a/app/javascript/src/patternflyStyles/pf4BaseIE11.scss
+++ b/app/javascript/src/patternflyStyles/pf4BaseIE11.scss
@@ -102,7 +102,7 @@ button:-moz-focusring,
   .pf-m-current {
     &> .pf-c-nav__link,
     &.pf-c-nav__link {
-      color: $white;
+      color: #2b9af3;
       font-weight: bold;
 
       &::after {
@@ -145,11 +145,11 @@ button:-moz-focusring,
     display: block;
     padding: 0.5rem 1.5rem 0.5rem calc(1.5rem + 1rem);
     font-weight: 500;
-    color: $white;
+    color: #FFF;
 
     &:hover,
     &:active {
-      color: $white;
+      color: #FFF;
       font-weight: 16px;
       background-color: rgb(79, 82, 85);;
     }
@@ -233,7 +233,7 @@ button:-moz-focusring,
 .pf-c-page__header {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  color: $white;
+  color: #FFF;
   z-index: 300;
   -ms-grid-columns: auto auto;
   grid-template-columns: auto auto;
@@ -351,7 +351,7 @@ button:-moz-focusring,
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  background-color: $white;
+  background-color: #FFF;
   transition: all 250ms cubic-bezier(0.42, 0, 0.58, 1);
   transform: translate3d(0, 0, 0);
 }
@@ -432,8 +432,8 @@ button:-moz-focusring,
     background-color:#3c3f42; }
     .pf-c-nav.pf-m-dark .pf-c-nav__list > .pf-c-nav__item > .pf-c-nav__link {
       background-color: rgb(33, 36, 39); 
-      color: $white}
+      color: #FFF}
 
 .pf-c-page__sidebar.pf-m-dark {
   background-color: rgb(33, 36, 39);;
-  color: $white; }
+  color: #FFF; }
