add red hat font to 3scale

--- a/app/javascript/src/patternflyStyles/pf4Base.css
+++ b/app/javascript/src/patternflyStyles/pf4Base.css
@@ -7,6 +7,7 @@
 
 @import '~@patternfly/patternfly/components/Page/page.css';
 @import '~@patternfly/patternfly/components/Nav/nav.css';
+@import '~@patternfly/patternfly/patternfly-fonts.css';
 
 /****** HACK ******/
 
