--- a/app/views/layouts/provider/login.html.slim
+++ b/app/views/layouts/provider/login.html.slim
@@ -1,12 +1,11 @@
 doctype html
-html lang="en"
+html lang="en" class="pf-m-redhat-font"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     title 3scale Login
     = csrf_meta_tag
 
     = render 'provider/analytics'
-    = stylesheet_link_tag 'loginPageFonts'
     = javascript_pack_tag 'PF4Styles/base'
     = javascript_pack_tag 'PF4Styles/loginPage'
     = javascript_include_tag 'vendor/jquery-1.8.2.min.js', 'vendor/rails.js'
