--- a/app/views/layouts/provider/login.html.slim
+++ b/app/views/layouts/provider/login.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html lang="en" class="pf-m-redhat-font"
+html[lang="en" class="pf-m-redhat-font"]
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     title 3scale Login
