Adding missing break line in css file

--- a/app/javascript/src/patternflyStyles/pf4BaseIE11.scss
+++ b/app/javascript/src/patternflyStyles/pf4BaseIE11.scss
@@ -417,7 +417,9 @@ button:-moz-focusring,
 }
 
 .pf-c-nav.pf-m-dark .pf-c-nav__item.pf-m-current .pf-c-divider {
-    background-color: #212427; }
+  background-color: #212427;
+}
+
 .pf-c-nav.pf-m-dark .pf-c-nav__item.pf-m-expanded {
   padding-bottom: 0.5rem;
 }
