[active_docs] Templates using new swagger version

--- a/lib/developer_portal/app/views/developer_portal/docs.html.liquid
+++ b/lib/developer_portal/app/views/developer_portal/docs.html.liquid
@@ -2,19 +2,8 @@
 
 <p>Use our live documentation to learn about the Echo API</p>
 
-{% cdn_asset /swagger-ui/3.24.3/swagger-ui-bundle.js %}
-{% cdn_asset /swagger-ui/3.24.3/swagger-ui.css %}
+{% content_for javascripts %}
+    {{ 'active_docs.js' | javascript_include_tag }}
+{% endcontent_for %}
 
 {% include 'shared/swagger_ui' %}
-
-<script type="text/javascript">
-  (function () {
-    {% comment %}
-      // you have access to swaggerUi.options object to customize its behaviour
-      // such as setting a different docExpansion mode
-      window.swaggerUi.options['docExpansion'] = 'none';
-      // or even getting the swagger specification loaded from a different url
-      window.swaggerUi.options['url'] = "http://petstore.swagger.wordnik.com/api/api-docs";
-    {% endcomment %}
-  }());
-</script>
