--- a/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
+++ b/app/views/api/integrations/apicast/configuration_driven/_apicast.html.slim
@@ -38,6 +38,10 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
               dt.u-dl-term Mapping rules
               dd.u-dl-definition = proxy_rules_preview(backend_api, path: backend_api_config.path)
 
+        dt.u-dl-term Version
+        dd.u-dl-definition
+          ' v.
+          = @show_presenter.next_sandbox_config_version
         dt.u-dl-term Promote
         dd.u-dl-definition.Configuration-promote-button
           = semantic_form_for @proxy, url: admin_service_integration_path(@service) do |f|
@@ -50,15 +54,11 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
     .SettingsBox.Environment class=('Environment--is-promoted' if @show_presenter.environments_have_same_config?) class="Environment--#{@show_presenter.test_state_modifier}"
       = link_to 'Configuration history', admin_service_proxy_configs_path(@service, environment: 'staging'), class: 'SettingsBox-toggle'
       article.Environment-summary data-state="open" class="Environment--#{@show_presenter.test_state_modifier}"
-        h3.Environment-title APIcast Staging
+        h3.Environment-title Staging APIcast
         - if @show_presenter.any_sandbox_configs?
           dl.u-dl
             dt.u-dl-term URL
             dd.u-dl-definition = @show_presenter.staging_proxy_endpoint
-            dt.u-dl-term Version
-            dd.u-dl-definition
-              ' v.
-              = @show_presenter.last_sandbox_config.version
             dt.u-dl-term Example curl for testing
             dd.u-dl-definition
               = api_test_curl(@proxy, config_based: apiap?)
@@ -70,8 +70,12 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
                   => t('api.integrations.proxy.curl.no_application')
                   - unless @service.application_plans.any?
                     = link_to t('api.integrations.proxy.curl.no_application_plan'), admin_service_application_plans_path(@service)
-            dt.u-dl-term Promote
+            dt.u-dl-term Version
             dd.u-dl-definition
+              ' v.
+              = @show_presenter.last_sandbox_config.version
+            dt.u-dl-term Promote
+            dd.u-dl-definition.Configuration-promote-button
               = semantic_form_for @proxy, url: promote_to_production_admin_service_integration_path(@service, anchor: 'production') do |f|
                 = f.button *promote_to_production_button_options(@show_presenter)
         - else
@@ -81,7 +85,7 @@ section.Configuration class=('Configuration--is-promoted' unless deployment_opti
       - if @show_presenter.any_production_configs?
         = link_to 'Configuration history', admin_service_proxy_configs_path(@service, environment: 'production'), class: 'SettingsBox-toggle'
       article.Environment-summary class=("Environment--#{@show_presenter.test_state_modifier}" if @show_presenter.environments_have_same_config?) data-state="open" style="margin-top: 24px;"
-        h3.Environment-title APIcast Production
+        h3.Environment-title Production APIcast
         - if @show_presenter.any_production_configs?
           dl.u-dl
             dt.u-dl-term URL
