--- a/app/views/provider/admin/backend_apis/forms/_naming.html.slim
+++ b/app/views/provider/admin/backend_apis/forms/_naming.html.slim
@@ -4,4 +4,4 @@
   = form.input :description, input_html: { rows: 3 }
 
 = form.inputs 'API' do
-  = form.input :private_endpoint
+  = form.input :private_endpoint, hint: t("formtastic.hints.proxy.api_backend_https")
