Flash message at top of the page not visible
Signed-off-by: HemaHG <hhg@redhat.com>

--- a/app/views/shared/provider/_flash.html.erb
+++ b/app/views/shared/provider/_flash.html.erb
@@ -1,7 +1,7 @@
 <div id="flashWrapper" style="<%= flash.empty? ? "display:none;" : "" %>">
   <div class="ajaxNoticeValid">
     <% flash.each do |type, value| %>
-      <p class="flash-message flash-message--<%= type %>"><%= value %></p>
+      <span class="flash-message flash-message--<%= type %>"><%= value %></span>
       <% flash.discard(type) %>
     <%- end -%>
     <script>
