[memory-leak] Do not regenerate routes on every call
Fixes THREESCALE-3397

Big thanks to mcassolato who made a deep search on this memory leak
He found out that the routes helpers were increasing every requests

Also read https://github.com/rails/rails/pull/32304#issuecomment-375954055

--- a/lib/developer_portal/app/views/developer_portal/dashboards/components/_latest_forum_posts.html.erb
+++ b/lib/developer_portal/app/views/developer_portal/dashboards/components/_latest_forum_posts.html.erb
@@ -7,8 +7,8 @@
         <li>
           New
           <%= link_to 'post',
-            Rails.application.routes.url_helpers.forum_topic_path(post.topic, :anchor => "post_#{post.id}") %>
-          on topic <%= link_to post.topic.title, Rails.application.routes.url_helpers.forum_topic_path(post.topic) %>
+              main_app.forum_topic_path(post.topic, :anchor => "post_#{post.id}") %>
+          on topic <%= link_to post.topic.title, main_app.forum_topic_path(post.topic) %>
         </li>
       <%- end -%>
     </ul>
